# JimFarm

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  JimFarm.cbp  JimFarm.cscope_file_list  Nighty dude.txt  README.md  Template.cbp  format.sh  index.data  index.js  index.wasm  main.cpp  sonar-project.properties  updateDefs.py  update_defs.py  vcpkg.json
.github/workflows/: build-web.yml  release.yml  sonar.yml
art/: barn updated.pdn  barn.pdn  berry bush.pdn  bottom tree.pdn  bread.pdn  bush tree.pdn  chick.pdn  chicken coop door.pdn  chicken coop top roof.pdn  chicken coop wall.pdn  chicken coop window.pdn  chicken fence door.pdn  chicken fence.pdn  chicken.pdn  corner store piece.pdn  danny piece of friggen dirt.pdn  dannys rock.pdn  egg.pdn  empty watering can.pdn  fence.pdn  flower power.pdn  harvested berries.pdn  harvested lavender.pdn  mad chicken.pdn  meat.pdn  options.pdn  right corner store piece.pdn  sidewalk.pdn  store door.pdn  store top roof.pdn  store wall and roof.pdn  store window.pdn  title screen 3.pdn  title screen 4.pdn  title screen complete.pdn  title screen not done 2.pdn  title screen not done.pdn  title screen v5.pdn  title screen v6.pdn  todo.txt  (+8 more)
assets/data/: interfaces.json  items.json  sounds.json  tiles.json
assets/scripts/: test.lua
include/: Character.h  Chunk.h  Game.h  GameMenu.h  Graphics.h  InteractBehaviour.h  Inventory.h  Item.h  ItemStack.h  MapItem.h  Menu.h  Messenger.h  Sprite.h  State.h  Tile.h  TileMap.h  Tile_UI.h  UI_Controller.h  UI_Element.h  UI_Label.h  UI_Slot.h  World.h  character.h  game_menu.h  inventory.h  item.h  keyListener.h  menu.h  messenger.h  sound_defs.h  sound_manager.h  store.h  tile.h  tile_defs.h  tile_map.h  tile_type.h  tile_type_manager.h  tools.h
include/manager/: InterfaceTypeManager.h  ItemTypeManager.h  SoundManager.h  TileType.h  TileTypeManager.h  interface_defs.h  item_defs.h  sound_manager.h  tile_defs.h  tile_type.h  tile_type_manager.h
include/utility/: MouseListener.h  Tools.h  keyListener.h  mouseListener.h  tools.h
res/: resources.rc
src/: Character.cpp  Character.h  Chunk.cpp  Chunk.h  Game.cpp  Game.h  GameMenu.cpp  GameMenu.h  Graphics.cpp  Graphics.h  InteractBehaviour.cpp  Inventory.cpp  Inventory.h  Item.cpp  Item.h  ItemStack.cpp  ItemStack.h  MapItem.cpp  MapItem.h  Menu.cpp  Menu.h  Messenger.cpp  Messenger.h  SimplexNoise.cpp  SimplexNoise.h  Sprite.cpp  Sprite.h  State.cpp  State.h  Tile.cpp  Tile.h  TileMap.cpp  TileMap.h  Tile_UI.cpp  UI_Controller.cpp  UI_Controller.h  UI_Element.cpp  UI_Element.h  UI_Label.cpp  UI_Label.h  (+19 more)
src/behaviours/: TileBehaviour.h  TreeTileBehaviour.cpp  TreeTileBehaviour.h
src/manager/: BehaviourTypeManager.cpp  BehaviourTypeManager.h  InterfaceTypeManager.cpp  InterfaceTypeManager.h  ItemTypeManager.cpp  ItemTypeManager.h  SoundManager.cpp  SoundManager.h  TileType.cpp  TileType.h  TileTypeManager.cpp  TileTypeManager.h  interface_defs.h  item_defs.h  sound_defs.h  sound_manager.cpp  tile_defs.h  tile_type.cpp  tile_type_manager.cpp
src/ui/: Hud.cpp  Hud.h  UI_Controller.cpp  UI_Controller.h  UI_Element.cpp  UI_Element.h  UI_Label.cpp  UI_Label.h  UI_Slot.cpp  UI_Slot.h  UiController.cpp  UiController.h  UiElement.cpp  UiElement.h  UiLabel.cpp  UiLabel.h  UiSlot.cpp  UiSlot.h
src/utility/: Camera.cpp  Camera.h  KeyListener.cpp  KeyListener.h  MouseListener.cpp  MouseListener.h  Quad.h  Tools.cpp  Tools.h  Vec2.h  keyListener.cpp  mouseListener.cpp  tools.cpp
